[gd_scene load_steps=2 format=3 uid="uid://cy08q220wbk3t"]

[ext_resource type="Script" uid="uid://d4bq5whp1gie0" path="res://Scenes/TelaPista.gd" id="1_r405l"]

[node name="TelaPista" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r405l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CimaButton" type="Button" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0

[node name="BaixoButton" type="Button" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0

[node name="AcelerarButton" type="Button" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0

[node name="FrearButton" type="Button" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0
